2009-05-15  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences.py (PhotoDialog.run): Delete disused arguments.
	* photoframe.py, plugins/*.py: Code refactoring.
	* urlget.py: Added the copyright notice.

2009-05-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences.py, autostart.py, gphotoframe.glade: Added support
	  for auto start.

2009-05-13  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoliststore.py, base.py: Dropped depend on the glib module
	  (issue #6).
	* preferences.py, base.py, folder.py, flicke.py: Code refactoring.
	* gphotoframe: Updated lib loading.
	* setup.py: Added gphotoframe.utils package.
	* fspot.py (PhotoTargetFspot): Support for F-Spot tag tree.

2009-05-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/__init__.py: Capitalized some valiables.
	* preferences.py: Save the recent preference tab / source.
	* flickr.py: Added support for flickr.photos.search.
	* fspot.py: Fixed a bug.
	* gphotoframe.glade, photoframe.py: Renamed some object names.

2009-05-11  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* gphotoframe.glade, POTFILES.in, ja.po: Updated translation.
	* flickr.py, preferences.py: Set the sensitiveness and the label 
	  of the argument widget.
	* config.py, urlget.py, wrandom.py: Moved to utils/.
	* flickr.py: Added support user_id or group_id.
	* photoliststore.py, preferences.py, base.py: Added new photo
	  source options: argument.

2009-05-10  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py, photoliststore.py, base.py: Code refactoring.
	  Added new class PopUpMenu & NoPhoto. Added new photo source options.
	  Added new functions load_gconf & save_gconf.
	
2009-05-09  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py, lib/*.py: Code refactoring.
	* photoframe.py: Code refactoring.  Added new class NoImage &
	  AboutDialog.  Fixed the hidden bug (behind the nautilus).
	* preferences.py: AboutDialog.set_transient_for(Preferences).
	  Set sensivitiness of buttons in Photo Sources.
